# markflow

./: .dockerignore  .env  .env.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile.e2e  Dockerfile.e2e-sync  ROADMAP.md  docker-compose.e2e-sync.yml  docker-compose.e2e.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  wdio.conf.ts  wdio.sync.conf.ts
.github/workflows/: release-beta.yml  release-stable.yml
e2e/: app-init.test.ts  content-persistence.test.ts  document-crud.test.ts  editor-formatting.test.ts  helpers.ts  new-features.test.ts  preview-rendering.test.ts  sidebar-tags.test.ts  theme-commands.test.ts
e2e-tauri/: app-init.test.ts  docker-entrypoint-sync.sh  docker-entrypoint.sh  document-crud.test.ts  editor-formatting.test.ts  helpers.ts  new-features.test.ts  preview-rendering.test.ts  sidebar-tags.test.ts  theme-commands.test.ts
e2e-tauri/sync/: content-conflict.test.ts  helpers.ts  shared-doc.test.ts  team-doc.test.ts
firebase/: firestore.indexes.json  firestore.rules  storage.rules
scripts/: build-and-release-windows.ps1  build-windows.ps1  bump-version.sh  prepare-windows-setup.sh  release-beta.sh  release-stable.sh  release-testflight.sh  release-windows-beta.ps1  release-windows-stable.ps1  run-e2e-sync.sh  run-e2e-tauri.sh
server/: Dockerfile  index.ts
server/ai-proxy/: Dockerfile  index.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mic_permission.m
src/components/: CommandPalette.tsx  KeyboardShortcutsDialog.tsx  ShareDialog.tsx  SharedDocView.tsx  SlackSettingsDialog.tsx  StatusBar.tsx  TeamManageDialog.tsx  ThemeCustomizer.tsx  UserMenu.tsx
src/components/ai-panel/: AiPanel.tsx  McpSettings.tsx
src/components/canvas/: CanvasView.tsx  DocumentNode.tsx  GroupNode.tsx  StickyNoteNode.tsx
src/components/editor/: Editor.tsx  EditorToolbar.tsx  MindMapEditor.tsx  MindMapNode.tsx  MindMapView.tsx  VersionHistory.tsx  VoicePanel.tsx
src/components/sidebar/: Sidebar.tsx
src/components/version/: DiffView.tsx  (+1 more)
src/extensions/: image-paste.ts  markdown-shortcuts.ts
src/hooks/: use-auto-version.ts  use-collaboration.ts  use-ime-guard.ts  use-ios-keyboard.ts  use-ios-pinch-zoom.ts  use-swipe-sidebar.ts  use-voice-input.ts
src/lib/: editor-utils.test.ts  editor-utils.ts  html-publish.ts  utils.test.ts
src/platform/: index.ts  tauri.ts  types.ts  web.ts
src/services/: claude.ts  database-memory.ts  database.ts  firebase.ts  image-gen.ts  mcp.ts  sharing.ts  slack-notify.ts  slack.ts  yjs.ts
src/stores/: app-store.ts  auth-store.ts  editor-store.ts
src/styles/: editor-themes.ts  globals.css  preview-themes.ts
(+5 files in other folders)
