[package]
name = "markflow"
version = "0.1.0"
description = "A modern, elegant Markdown editor"
authors = ["MarkFlow Team"]
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
