[package]
name = "markflow"
version = "0.2.22"
description = "A modern, elegant Markdown editor"
authors = ["MarkFlow Team"]
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
