[package]
name = "markflow"
version = "0.3.0-beta.69"
description = "A modern, elegant Markdown editor"
authors = ["MarkFlow Team"]
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
url = "2"
tokio = { version = "1", features = ["time"] }
cpal = "0.15"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "ndarray", "tls-native"] }
ndarray = { version = "0.17", features = ["std"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString"] }
